--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 <h2>Section 3</h2>
 
 <p>Aenean elit odio, tempor sed elementum in, consequat vel mi. Vivamus non sagittis nulla. Vivamus sem massa, tempor vitae orci id, tempor imperdiet nisl. Suspendisse rutrum, arcu at lobortis consectetur, purus magna interdum massa, vel sodales massa libero sit amet augue. Morbi non condimentum ipsum. Praesent maximus lacus nec nulla vulputate, sed efficitur nisl suscipit. Suspendisse accumsan cursus magna, eget porttitor arcu varius eu.</p>
-<img src="Chrysanthemum.JPG" />
+<img src="Chrysanthemum.jpg" />
 </body>
 </html>
